--- a/package.json
+++ b/package.json
@@ -1,79 +1,25 @@
 {
-  "name": "admin",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@ant-design/happy-work-theme": "^1.0.0",
-    "@babel/generator": "^7.26.0",
-    "@babel/parser": "^7.26.1",
-    "@babel/traverse": "^7.25.9",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.97",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "ahooks": "^3.8.0",
-    "antd": "^5.18.1",
-    "axios": "^1.7.7",
-    "constate": "^3.3.2",
-    "crypto": "^1.0.1",
-    "dayjs": "^1.11.11",
-    "i18next": "^23.12.2",
-    "i18next-browser-languagedetector": "^8.0.0",
-    "i18next-http-backend": "^2.5.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.0",
-    "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "uuid": "^11.0.2",
-    "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5",
-    "zustand": "^4.5.2"
+  "name": "react-i18next-scanner",
+  "version": "1.0.0",
+  "description": "基于react-i18next，扫描指定文件目录，将文件中的文本替换为多语言格式。",
+  "main": "index.js",
+  "bin": {
+    "i18n-scanner-cli": "./bin/index.js"
   },
   "scripts": {
-    "dev": "cross-env PORT=3001 craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject",
-    "scan": "node scan",
-    "pack": "node pack",
-    "translate": "node translate"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "overrides": [
-      {
-        "files": [
-          "**/*.ts?(x)"
-        ],
-        "rules": {
-          "jsx-a11y/anchor-is-valid": "off"
-        }
-      }
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@craco/craco": "^7.1.0",
-    "cross-env": "^7.0.3",
-    "prettier": "^3.3.3"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@babel/generator": "^7.26.2",
+    "@babel/parser": "^7.26.2",
+    "@babel/traverse": "^7.25.9",
+    "@babel/types": "^7.26.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "prettier": "^3.3.3",
+    "uuid": "^11.0.2"
   }
 }
