--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "prettier": "^3.3.3",
-    "uuid": "^11.0.2"
+    "uuid": "^11.0.2",
+    "xlsx": "^0.18.5"
   }
 }
