--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@babel/parser": "^7.26.2",
     "@babel/traverse": "^7.25.9",
     "@babel/types": "^7.26.0",
+    "axios": "^1.7.7",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "prettier": "^3.3.3",
